--- a/App/.env.development.local
+++ b/App/.env.development.local
@@ -1,12 +1,12 @@
 # PORT
-PORT = 3000
+PORT = 8080
 
 # DATABASE
-DB_HOST= 127.0.0.1
-DB_PORT= 3306
+DB_HOST = localhost
+DB_PORT = 5432
 DB_USER = root
 DB_PASSWORD = password
-DB_DATABASE = k8s_pipeline
+DB_DATABASE = test
 
 # TOKEN
 SECRET_KEY = secretKey
@@ -18,19 +18,3 @@ LOG_DIR = ../logs
 # CORS
 ORIGIN = true
 CREDENTIALS = true
-
-# Github auth
-GITHUB_CLIENT_ID =
-GITHUB_CLIENT_SECRET =
-
-# Gitlab auth
-GITLAB_APP_ID =
-GITLAB_APP_SECRET =
-
-# Bitbucket auth
-BITBUCKET_CLIENT_ID = bPMwemEMPPs5sbd4vu
-BITBUCKET_CLIENT_SECRET = qLCgc8hXxHG4TBwhPDPE3rpjbZARY8zz
-
-# template setup
-TEMPLATE_CONFIG_REPO_URL = "https://github.com/Doctordrayfocus/K8sPipelineTemplates.git"
-TEMPLATE_SYNC_INTERVAL = 100
