--- a/k8s-pipeline/values.yaml
+++ b/k8s-pipeline/values.yaml
@@ -8,83 +8,26 @@ deployController:
   configGitRepository: "https://github.com/Doctordrayfocus/K8sPipelineTemplates.git"
   # Git repository sync interval in seconds
   repoSyncInterval: 3
-  
 
-replicaCount: 1
+pipelineApp:
+  deploymentReplica: 1
+  letsEncryptEmail: ""
+  appUrl: ""
+  buildTemplateRepository: "https://github.com/Doctordrayfocus/K8sPipelineTemplates.git"
+  # Git repository sync interval in seconds 
+  buildTemplateSyncInterval: 100
 
-image:
-  repository: nginx
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  # Github config
+  githubClientID: ""
+  githubClientSecret: ""
 
-imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
+  # Bitbucket config
+  bitbucketClientID: ""
+  bitbuckerClientSecret: ""
 
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
+  # Gitlab config
+  gitlabAppID: ""
+  gitlabAppSecret: ""
 
-podAnnotations: {}
-
-podSecurityContext: {}
-  # fsGroup: 2000
-
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-
-service:
-  type: ClusterIP
-  port: 80
-
-ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
-
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
+database:
+  persistentVolumeSize: 2Gi
