--- a/k8s-pipeline/templates/app/configmap.yaml
+++ b/k8s-pipeline/templates/app/configmap.yaml
@@ -1,41 +1,26 @@
+---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: k8spipeline-app-config
 data:
   PORT: "8080"
-
-  # Database configs
-  DB_HOST: "k8spipeline-mysql.{{ .Release.Namespace }}.svc.cluster.local"
+  DB_HOST: k8spipeline-mysql.{{ .Release.Namespace }}.svc.cluster.local
   DB_PORT: "3306"
-  DB_USER: "root"
-  DB_PASSWORD: "password"
-  DB_DATABASE: "k8s_pipeline"
-
-  SECRET_KEY: "secretKey"
-
-  # log
-  LOG_FORMAT: "dev"
-  LOG_DIR: "../logs"
-
-  # cors
-  ORIGIN: "true",
+  DB_USER: root
+  DB_PASSWORD: password
+  DB_DATABASE: k8s_pipeline
+  SECRET_KEY: secretKey
+  LOG_FORMAT: dev
+  LOG_DIR: ../logs
+  ORIGIN: "true"
   CREDENTIALS: "true"
-
-  # github auth
   GITHUB_CLIENT_ID: "{{ .Values.pipelineApp.githubClientID }}"
   GITHUB_CLIENT_SECRET: "{{ .Values.pipelineApp.githubClientSecret }}"
-
-  # Gitlab auth
   GITLAB_APP_ID: "{{ .Values.pipelineApp.gitlabAppID }}"
   GITLAB_APP_SECRET: "{{ .Values.pipelineApp.gitlabAppSecret }}"
-
-  # Bitbucket auth
   BITBUCKET_CLIENT_ID: "{{ .Values.pipelineApp.bitbucketClientID }}"
   BITBUCKET_CLIENT_SECRET: "{{ .Values.pipelineApp.bitbuckerClientSecret }}"
-
-  # template setup
   TEMPLATE_CONFIG_REPO_URL: "{{ .Values.pipelineApp.buildTemplateRepository }}"
   TEMPLATE_SYNC_INTERVAL: "{{ .Values.pipelineApp.buildTemplateSyncInterval }}"
   DOCKER_REGISTRY: "{{ .Values.deployController.dockerRegistry }}"
-
