feat: added mysql

--- a/k8s-pipeline/templates/app/deployment.yaml
+++ b/k8s-pipeline/templates/app/deployment.yaml
@@ -8,8 +8,7 @@ metadata:
     tier: backend
     layer: webserver
 spec:
-  replicas:
-    "{ .Values.pipelineApp.deploymentReplica }": null
+  replicas: {{ .Values.pipelineApp.deploymentReplica }}
   selector:
     matchLabels:
       tier: backend
