feat: added mysql

--- a/k8s-pipeline/templates/cert-issuer/ingress.yaml
+++ b/k8s-pipeline/templates/cert-issuer/ingress.yaml
@@ -11,7 +11,7 @@ spec:
  # We need to add a tls section
   tls:
   - hosts:
-    - {{ .Values.pipelineApp.appUrl }}
+    {{- .Values.pipelineApp.appUrl }}
     secretName: k8spipeline-in-kubernetes-tls
   ingressClassName: nginx
   rules:
