feat: added mysql

--- a/k8s-pipeline/Chart.yaml
+++ b/k8s-pipeline/Chart.yaml
@@ -23,6 +23,14 @@ version: 0.1.0
 # It is recommended to use it with quotes.
 appVersion: "1.16.0"
 
+dependencies:
+  - name: cert-manager
+    version: 1.11.0
+    repository: https://charts.jetstack.io
+  - name: nginx-ingress
+    version: 3.0.1
+    repository: https://helm.nginx.com/stable
+
 maintainers:
   - name: "Ayomide Akinola"
     email: "drayfocus@gmail.com"
