--- a/k8s-pipeline/Chart.yaml
+++ b/k8s-pipeline/Chart.yaml
@@ -30,6 +30,7 @@ dependencies:
   - name: ingress-nginx
     version: 4.4.2
     repository: https://kubernetes.github.io/ingress-nginx
+    condition: ingressNginx.enabled
     
 maintainers:
   - name: "Ayomide Akinola"
