--- a/App/package.json
+++ b/App/package.json
@@ -6,7 +6,7 @@
   "license": "ISC",
   "scripts": {
     "build:frontend": "cd frontend && npm run build && cd ..",
-    "start": "npm run build && cross-env NODE_ENV=production node dist/server.js",
+    "start": "cross-env NODE_ENV=production node dist/server.js",
     "dev": "cross-env NODE_ENV=development nodemon",
     "build": "swc src -d dist --source-maps --copy-files",
     "build:tsc": "tsc && tsc-alias",
