--- a/App/Dockerfile
+++ b/App/Dockerfile
@@ -2,11 +2,7 @@
 # as well as serve any static content.
 FROM hoosin/alpine-nginx-nodejs:latest
 
-# Install python/pip
-ENV PYTHONUNBUFFERED=1
-RUN apk add --update --no-cache python3 && ln -sf python3 /usr/bin/python
-RUN python3 -m ensurepip
-RUN pip3 install --no-cache --upgrade pip setuptools
+RUN apk add --update nodejs npm
 
 
 # Create app directory
