--- a/App/package.json
+++ b/App/package.json
@@ -33,8 +33,10 @@
     "graphql": "^16.6.0",
     "helmet": "^5.1.1",
     "hpp": "^0.2.3",
+    "i": "^0.3.7",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "npm": "^9.4.2",
     "passport": "^0.6.0",
     "passport-bitbucket-oauth2": "^0.1.2",
     "passport-github2": "^0.1.12",
