fix: pipeline frontend build errors

--- a/App/docker-config/nginx.conf
+++ b/App/docker-config/nginx.conf
@@ -2,9 +2,9 @@ server {
     listen 80 default_server;
     listen [::]:80 default_server;
 
-    # We need to set the root for our sevrer,
+    # We need to set the root for our server,
     # so any static file requests gets loaded from the correct path
-    root /usr/src/app/server;
+    root /usr/src/app;
 
     # At the root location,
     # we first check if there are any static files at the location, and serve those,
@@ -12,6 +12,17 @@ server {
     # Otherwise we forward the request to the PHP server
     location / {
       proxy_pass http://localhost:8080;
+	  proxy_connect_timeout 60s;
+	  proxy_read_timeout 5400s;
+	  proxy_send_timeout 5400s;
+	  proxy_set_header host $host;
+	  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	  proxy_set_header X-Real-IP $remote_addr;
+	  proxy_redirect default;
+    }
+
+    location /app {
+      proxy_pass http://localhost:3000;
 	  proxy_connect_timeout 60s;
 	  proxy_read_timeout 5400s;
 	  proxy_send_timeout 5400s;
