--- a/App/.env.production.local
+++ b/App/.env.production.local
@@ -18,3 +18,6 @@ LOG_DIR = ../logs
 # CORS
 ORIGIN = true
 CREDENTIALS = true
+
+BITBUCKET_CLIENT_ID= "p6Jc542UFXfUsshAVN"
+BITBUCKET_CLIENT_SECRET= "x5JZT3QyW3nXBM2jRhDMhVWdTbjUVXKA"
