--- a/App/frontend/package.json
+++ b/App/frontend/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/typography": "^0.5.0",
     "@urql/exchange-multipart-fetch": "^1.0.1",
     "axios": "^0.27.2",
+    "circular-dependency-plugin": "^5.2.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "socket.io-client": "^4.6.0",
