--- a/k8s-pipeline/Chart.yaml
+++ b/k8s-pipeline/Chart.yaml
@@ -27,6 +27,7 @@ dependencies:
   - name: cert-manager
     version: 1.11.0
     repository: https://charts.jetstack.io
+    condition: certManager.enabled
   - name: ingress-nginx
     version: 4.4.2
     repository: https://kubernetes.github.io/ingress-nginx
