--- a/k8s-pipeline/values.yaml
+++ b/k8s-pipeline/values.yaml
@@ -5,6 +5,9 @@
 ingressNginx:
   enabled: true
 
+certManager:
+  enabled: true
+
 deployController:
   # Specify your docker registery
   dockerRegistry: "docker.io"
