--- a/App/docker-config/nginx.conf
+++ b/App/docker-config/nginx.conf
@@ -21,7 +21,16 @@ server {
 	  proxy_redirect default;
     }
 
-
+    location /app {
+      proxy_pass http://localhost:3000;
+	  proxy_connect_timeout 60s;
+	  proxy_read_timeout 5400s;
+	  proxy_send_timeout 5400s;
+	  proxy_set_header host $host;
+	  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	  proxy_set_header X-Real-IP $remote_addr;
+	  proxy_redirect default;
+    }
 
   client_max_body_size 400M;
 
