--- a/App/docker-config/nginx.conf
+++ b/App/docker-config/nginx.conf
@@ -1,3 +1,12 @@
+# the IP(s) on which your node server is running. I chose port 3000.
+upstream app_frontend {
+    server 127.0.0.1:3000;
+}
+
+upstream app_backend{
+    server 127.0.0.1:8080;
+}
+
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
@@ -11,25 +20,27 @@ server {
     # If not, we check whether there is an indexable folder which can be served,
     # Otherwise we forward the request to the PHP server
     location / {
-      proxy_pass http://localhost:8080;
-	  proxy_connect_timeout 60s;
-	  proxy_read_timeout 5400s;
-	  proxy_send_timeout 5400s;
-	  proxy_set_header host $host;
-	  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-	  proxy_set_header X-Real-IP $remote_addr;
-	  proxy_redirect default;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $http_host;
+      proxy_set_header X-NginX-Proxy true;
+      proxy_set_header X-Ssl on;
+
+      proxy_pass https://app_backend;
+      proxy_redirect off;
     }
 
-    location /app {
-      proxy_pass http://localhost:3000;
-	  proxy_connect_timeout 60s;
-	  proxy_read_timeout 5400s;
-	  proxy_send_timeout 5400s;
-	  proxy_set_header host $host;
-	  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-	  proxy_set_header X-Real-IP $remote_addr;
-	  proxy_redirect default;
+    location /app/ {
+      rewrite /app/(.*)$ /$1 break;
+
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $http_host;
+      proxy_set_header X-NginX-Proxy true;
+      proxy_set_header X-Ssl on;
+
+      proxy_pass https://app_frontend;
+      proxy_redirect off;
     }
 
   client_max_body_size 400M;
