--- a/App/.env.production.local
+++ b/App/.env.production.local
@@ -2,11 +2,11 @@
 PORT = 8080
 
 # DATABASE
-DB_HOST = localhost
-DB_PORT = 5432
+DB_HOST = 127.0.0.1
+DB_PORT = 3306
 DB_USER = root
 DB_PASSWORD = password
-DB_DATABASE = test
+DB_DATABASE = k8s_pipeline
 
 # TOKEN
 SECRET_KEY = secretKey
