--- a/App/.env.development.local
+++ b/App/.env.development.local
@@ -18,3 +18,8 @@ LOG_DIR = ../logs
 # CORS
 ORIGIN = true
 CREDENTIALS = true
+
+BITBUCKET_CLIENT_ID=""
+BITBUCKET_CLIENT_SECRET=""
+
+APP_URL="localhost:8080"
