--- a/App/Dockerfile
+++ b/App/Dockerfile
@@ -30,7 +30,7 @@ RUN cd /usr/src/app && npm install && npm run build
 
 
 EXPOSE 8080
-CMD [ "ts-node", "src/server.ts"]
+CMD [ "npm", "run", "dev"]
 
 # We need to add our NGINX template to the container for startup,
 # and configuration.
