feat: use string template

--- a/App/.env.development.local
+++ b/App/.env.development.local
@@ -1,6 +1,6 @@
 # PORT
 PORT = 8080
-NODE_ENV=development
+NODE_ENV=production
 
 # DATABASE
 DB_HOST = 127.0.0.1
@@ -20,7 +20,7 @@ LOG_DIR = ../logs
 ORIGIN = true
 CREDENTIALS = true
 
-BITBUCKET_CLIENT_ID=""
-BITBUCKET_CLIENT_SECRET=""
+BITBUCKET_CLIENT_ID="H8NfJ9WjcSkNKBSYzT"
+BITBUCKET_CLIENT_SECRET="eRjLem7w2Tv5gGT3kZBVUaKa7y9EFFvR"
 
 APP_URL="localhost:8080"
