--- a/App/.env.development.local
+++ b/App/.env.development.local
@@ -20,7 +20,7 @@ LOG_DIR = ../logs
 ORIGIN = true
 CREDENTIALS = true
 
-BITBUCKET_CLIENT_ID="H8NfJ9WjcSkNKBSYzT"
-BITBUCKET_CLIENT_SECRET="eRjLem7w2Tv5gGT3kZBVUaKa7y9EFFvR"
+BITBUCKET_CLIENT_ID=""
+BITBUCKET_CLIENT_SECRET=""
 
 APP_URL="localhost:8080"
