--- a/App/Dockerfile
+++ b/App/Dockerfile
@@ -11,6 +11,11 @@ RUN apk add --no-cache curl
 # install docker
 RUN apk add docker
 
+RUN wget https://github.com/earthly/earthly/releases/download/v0.6.30/earthly-linux-amd64 -O /usr/local/bin/earthly && \
+  chmod +x /usr/local/bin/earthly && \
+  /usr/local/bin/earthly bootstrap
+
+
 RUN apk add --update nodejs npm
 
 # install node typescript
