feat: build pipeline

--- a/App/.env.development.local
+++ b/App/.env.development.local
@@ -20,6 +20,8 @@ LOG_DIR = ../logs
 ORIGIN = true
 CREDENTIALS = true
 
+TEMPLATE_SYNC_INTERVAL=30
+
 UPLOAD_URL="https://build-pipeline.unwindbyoriki.com/save-service-setup"
 
 BITBUCKET_CLIENT_ID=""
