--- a/App/.env.production.local
+++ b/App/.env.production.local
@@ -20,5 +20,7 @@ LOG_DIR = ../logs
 ORIGIN = true
 CREDENTIALS = true
 
+TEMPLATE_SYNC_INTERVAL=30
+
 BITBUCKET_CLIENT_ID=""
 BITBUCKET_CLIENT_SECRET=""
