--- a/App/Dockerfile
+++ b/App/Dockerfile
@@ -11,6 +11,9 @@ RUN apk add --no-cache curl
 # install docker
 RUN apk add docker
 
+USER root
+
+
 RUN git clone https://github.com/earthly/earthly.git && chmod -R 777 earthly && \
   ./earthly +for-linux
 
